Fixed Dark Mode PDF

--- a/src/styles/pdf-styles.css
+++ b/src/styles/pdf-styles.css
@@ -11,7 +11,6 @@
     page-break-inside: avoid;
     break-inside: avoid;
     padding: 0;
-    background-color: white;
 }
 
 .pdf-mode [class*="bottomRow"],
@@ -19,11 +18,18 @@
     display: none;
 }
 
+.pdf-mode div {
+    background-color: transparent;
+}
+
+.pdf-mode .experienceInfoTag {
+    display: none;
+}
+
 .pdf-mode h1,
 .pdf-mode h2,
 .pdf-mode h3,
-.pdf-mode p,
-.pdf-mode span {
+.pdf-mode p {
     display: block;
     color: black;
 }
@@ -85,15 +91,15 @@ section {
 .pdf-mode::before {
     content: "Curriculum vitae    |    noelbuergler.ch   |   mail@noelbuergler.ch    |    +41 78 783 28 14    |    Hauptstrasse 2, CH-9320 Arbon";
     display: block;
-    width: 100%; /* Ensures full width */
+    width: 100%;
     margin-bottom: 20px;
     font-size: 9pt;
     color: #555;
     text-align: center;
     border-bottom: 1px solid #ccc;
-    padding: 0 10px 10px 10px; /* Adjusted padding */
-    white-space: pre; /* Preserves multiple spaces */
-    box-sizing: border-box; /* Includes padding within width */
+    padding: 0 10px 10px 10px;
+    white-space: pre;
+    box-sizing: border-box;
 }
 
 
